--- a/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
+++ b/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
@@ -1,19 +1,26 @@
 <ul class="nav nav-tabs m-4">
   <li class="nav-item">
-    <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/datasets">Manage Datasets</a>
+    <a 
+    class="nav-link" 
+    routerLinkActive="active" 
+    routerLink="/dataset_display/datasets" 
+    (click)="onManageDataset()">Manage Datasets</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/statistics">Statistics</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/charts">Charts</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/table">Table</a>
-  </li>
+  <ng-container *ngIf="isVisible">
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/statistics">Statistics</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/charts">Charts</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/table">Table</a>
+    </li>
+  </ng-container>
 </ul>
 <div class="container m-4">
   <router-outlet></router-outlet>
+  <hr/>
 </div>
 <!-- <p>
   dataset-display works!
