--- a/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display-datasets/dataset-display-datasets.component.html
+++ b/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display-datasets/dataset-display-datasets.component.html
@@ -2,8 +2,11 @@
   <h3>Current dataset: {{Dataset ? Dataset.name : 'None'}}</h3>
 </div>
 <div class="input-group mb-3">
-  <select class="custom-select" [(ngModel)]="CurrentDatasetId" (change)="selectDataset($event.target.value)">
-    <option selected>Choose...</option>
+  <select
+    class="custom-select"
+    [(ngModel)]="CurrentDatasetId"
+    (change)="selectDataset($event.target.value)">
+    <option value="0" selected>Choose...</option>
     <option *ngFor="let dataset of DatasetNames" value="{{dataset.id}}">
       {{dataset.name}}
     </option>
