--- a/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
+++ b/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
@@ -8,7 +8,7 @@
   </li>
   <ng-container *ngIf="isVisible">
     <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/statistics">Statistics</a>
+      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/statistics">Statistics and label</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/charts">Charts</a>
