--- a/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
+++ b/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
@@ -1,3 +1,5 @@
+<h3>Current subdataset: {{currentSubdatasetName ? currentSubdatasetName : 'None'}}</h3>
+<hr>
 <ul class="nav nav-tabs m-4">
   <li class="nav-item">
     <a 
