change chart to modification module

--- a/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
+++ b/Frontend/MLAppFront/src/app/display-dataset/display-dataset-components/dataset-display/dataset-display.component.html
@@ -13,7 +13,7 @@
       <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/statistics">Statistics and label</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/charts">Charts</a>
+      <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/modification">Modification</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" routerLink="/dataset_display/table">Table</a>
